--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="fill_parent"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_height="fill_parent"
+tools:context=".MainActivity">
+
+<RelativeLayout
+    android:layout_centerInParent="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back_picture"
-    tools:context=".MainActivity">
-
+    android:gravity="center">
 
     <LinearLayout
-        android:layout_width="259dp"
-        android:layout_height="433dp"
+
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
+        android:padding="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toBottomOf="@id/imageExitButton"
+        app:layout_constraintEnd_toEndOf="@id/button3"
         app:layout_constraintHorizontal_bias="0.559"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,8 +43,11 @@
             android:id="@+id/findStudioMainButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:backgroundTint="@color/blue_light"
             android:drawableLeft="@drawable/ic_geography"
+            android:gravity="center"
             android:onClick="showFindStudioActivity"
             android:text="@string/findStudioButton"
             android:textSize="22sp" />
@@ -43,6 +56,7 @@
             android:id="@+id/findEventButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:backgroundTint="@color/blue_light"
             android:drawableLeft="@drawable/ic_calendar"
             android:onClick="showFindEventActivity"
@@ -54,8 +68,10 @@
     <Button
         android:id="@+id/button2"
         android:layout_width="420dp"
-        android:layout_height="73dp"
+        android:layout_height="80dp"
         android:backgroundTint="@color/blue_dark"
+        android:gravity="center"
+        android:padding="25dp"
         android:text="ОДС"
         android:textColor="#FFFDFD"
         android:textSize="24sp"
@@ -65,9 +81,13 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="420dp"
-        android:layout_height="73dp"
+
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:backgroundTint="@color/blue_dark"
+        android:gravity="center"
+        android:padding="25dp"
         android:textColor="#FFFDFD"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -79,7 +99,10 @@
         android:id="@+id/imageExitButton"
         android:layout_width="61dp"
         android:layout_height="59dp"
+        android:layout_alignParentRight="true"
         android:layout_marginEnd="16dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/ic_close_black_24dp"
         android:backgroundTint="@color/white"
         android:clickable="true"
@@ -94,7 +117,11 @@
         android:id="@+id/imageInfoButton"
         android:layout_width="70dp"
         android:layout_height="64dp"
+        android:layout_alignParentLeft="true"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="320dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/ic_info_black_24dp"
         android:backgroundTint="@color/white"
         android:clickable="true"
@@ -104,4 +131,17 @@
         app:layout_constraintTop_toTopOf="@+id/button2"
         app:layout_constraintVertical_bias="0.62"
         tools:ignore="OnClick" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Основной контейнер разметки -->
+
+</RelativeLayout>
+    <!-- Контейнер, содержащий выдвижное меню -->
+<RelativeLayout
+    android:id="@+id/left_drawer"
+    android:layout_width="210dp"
+    android:layout_height="match_parent"
+    android:layout_gravity="start"
+    android:choiceMode="none"
+    android:clickable="true"
+    android:background="#FFFFFF"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
+</androidx.drawerlayout.widget.DrawerLayout>
